finished API update due to SDK update
